--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Document</title>
-</head>
-<body>
-     <header></header>
-     <main>
-          <section>
-               <div id="todo">
-                    <ul id="list">
-
-                    </ul>
-                    <button id="button">Change Background</button>
-               </div>
-               <button id="button4">
-                    <p id="paragraph">Hello World</p>
-               </button>
-          </section>
-     </main>
-     <footer></footer>
-     <script src="main.js" ></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header></header>
+    <button id="button">Change Background</button>
+    <main>
+      <section>
+        <div id="todo">
+          <ul id="list"></ul>
+        </div>
+        <button id="button4">
+          <p id="paragraph">Hello World</p>
+        </button>
+      </section>
+    </main>
+    <footer></footer>
+    <script src="main.js"></script>
+  </body>
 </html>
