--- a/game.html
+++ b/game.html
@@ -6,8 +6,13 @@
      <title>Document</title>
 </head>
 <body>
+     <div>
 
+     </div>
+     <button id="btn">
+          hello world
+     </button>
 
-     <script src="game.js" ></script>
+     <script src="script.js" ></script>
 </body>
 </html>
